<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:backgroundTint="#dbd144"
        app:srcCompat="@drawable/img" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="347dp"
        android:layout_height="377dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:srcCompat="@drawable/starbucks_cup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/frappuccino"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/guidlineleft"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/caramel"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_30_00"
        android:textColor="@color/green"
        android:layout_marginEnd="14dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="74dp"
        android:layout_height="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/best_sales"
        android:textColor="#D5D5D5"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/SizeOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/size_options"
        android:textColor="#D5D5D5"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guidlineleft"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/Tall"
        android:layout_width="75dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SizeOptions"
        app:srcCompat="@drawable/ic_cup_tall" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="75dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/Tall"
        app:layout_constraintStart_toEndOf="@id/Tall"
        app:layout_constraintTop_toTopOf="@+id/Tall"
        app:srcCompat="@drawable/ic_cup_grand" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="75dp"
        android:layout_height="72dp"
        app:layout_constraintTop_toTopOf="@+id/Venti"
        app:srcCompat="@drawable/ic_cup_custom"
        app:layout_constraintBottom_toBottomOf="@id/Venti"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        tools:layout_editor_absoluteX="289dp" />

    <ImageView
        android:id="@+id/Venti"
        android:layout_width="75dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@id/imageView6"
        app:srcCompat="@drawable/ic_cup_venti" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Tall"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/Tall"
        app:layout_constraintStart_toStartOf="@id/Tall"
        app:layout_constraintTop_toBottomOf="@+id/Tall" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/grande"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/venti"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="@+id/Venti"
        app:layout_constraintStart_toStartOf="@+id/Venti"
        app:layout_constraintTop_toBottomOf="@+id/Venti" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/custom"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_fi_oz"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_16_fi_oz"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24 FI Oz"
        android:textSize="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fi_oz"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:background="@drawable/button_big"
        android:text="Add to Order"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidlineright" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:background="@drawable/circle"
        android:text="@string/sub"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton"
        app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:layout_marginEnd="20dp"
        android:text="@string/sum"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_m1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatButton2"
        app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton2"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton2" />
</androidx.constraintlayout.widget.ConstraintLayout>